--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,11 @@ div.column-2 {
     transform: scale(1.05);
   }
 
+  #icon-div{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
 /* TEXT */
 #title {
     text-align: center;
@@ -168,6 +173,20 @@ div.column-2 {
     padding: 3px;
     background-color: #333;
     color: #e0e0e0;
+}
+
+.icon-link {
+  color: inherit;
+  text-decoration: none;
+  font-size: 100%;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-top: 1%;
+  font-size: calc(0.1vw + 0.1vh + 3vmin);
+}
+
+.icon-link:hover {
+  transform: scale(1.1);
 }
 
 
