--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /* TOP NAV */
 .topnav {
-    background-color: #f5f5f5;
+    background-color: #c4c4c4;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 10px 20px;
     display: flex;
