--- a/css/styles.css
+++ b/css/styles.css
@@ -21,13 +21,13 @@
   .topnav ul li {
     display: inline;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: calc(0.1vw + 0.1vh + 1.5vmin);
+    font-size: calc(0.1vw + 0.1vh + 2vmin);
   }
   
   .topnav ul li a {
     text-decoration: none;
     color: #333;
-    font-weight: 500;
+    font-weight:700;
     padding: 5px 10px;
     transition: background-color 0.3s ease, color 0.3s ease;
   }
@@ -167,12 +167,22 @@ div.column-2 {
     font-weight: bold;
 }
 
+.project-tech {
+  display: flex;
+  flex-shrink: 0;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
 .tech {
     border-radius: 12.5%/25%;
     border: 2px solid #333;
     padding: 3px;
     background-color: #333;
     color: #e0e0e0;
+    font-size: 2vmin;
+    margin-left: 0.5%;
+    margin-right: 0.5%;
 }
 
 .icon-link {
