--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /* TOP NAV */
 .topnav {
-    background-color: #c4c4c4;
+    background-color: #d4d4d4;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 10px 20px;
     display: flex;
@@ -27,9 +27,10 @@
   .topnav ul li a {
     text-decoration: none;
     color: #333;
-    font-weight:700;
+    font-weight:500;
     padding: 5px 10px;
     transition: background-color 0.3s ease, color 0.3s ease;
+    letter-spacing: 1px;
   }
   
   .topnav ul li a:hover {
